--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -376,7 +376,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2"
                                     data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="{{ instructor.profile_pic.url }}" alt="" width="35" height="35"
+                                    <img src="{{ user.profile_pic.url }}" alt="" width="35" height="35"
                                         class="rounded-circle">
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up"
@@ -400,7 +400,7 @@
                         </ul>
                     </div>
                     <div class="row-cols-lg-3">
-                        <span class="fw-semibold">Hi, {{ instructor.first_name }}</span>
+                        <span class="fw-semibold">Hi, {{ user.first_name }}</span>
                     </div>
                 </nav>
             </header>
