--- a/templates/student/my_profile.html
+++ b/templates/student/my_profile.html
@@ -43,16 +43,16 @@ Profile {% endblock %}
       <div class="col-lg-4">
         <div class="card mb-2">
           <div class="card-body text-center">
-            <img src="{{ student.profile_pic.url }}" alt="avatar" class="rounded-circle img-fluid"
+            <img src="{{ user.profile_pic.url }}" alt="avatar" class="rounded-circle img-fluid"
               style="width: 150px;" />
             <h5 class="my-3">
-              {{ student.first_name }} {{ student.last_name }}
+              {{ user.first_name }} {{ user.last_name }}
             </h5>
             <p class="mb-1">
-              <b>{{ student.username }} </b> |
-              <b>{{ student.get_profile_score }}% </b> Profile Completed
+              <b>{{ user.username }} </b> |
+              <b>{{ user.get_profile_score }}% </b> Profile Completed
             </p>
-            <p class="mb-4">{{ student.college }}</p>
+            <p class="mb-4">{{ user.college }}</p>
             <div class="d-flex justify-content-center mb-2">
               <a type="button" href="{% url 'edit_profile' %}" class="btn btn-outline-primary ms-1 w-100">
                 Update Profile
@@ -115,7 +115,7 @@ Profile {% endblock %}
               </div>
               <div class="col-sm-9">
                 <p class=" mb-0">
-                  {{ student.first_name }} {{ student.last_name }}
+                  {{ user.first_name }} {{ user.last_name }}
                 </p>
               </div>
             </div>
@@ -125,7 +125,7 @@ Profile {% endblock %}
                 <p class="mb-0">Email</p>
               </div>
               <div class="col-sm-9">
-                <p class="mb-0">{{ student.email }}</p>
+                <p class="mb-0">{{ user.email }}</p>
               </div>
             </div>
             <hr />
@@ -134,7 +134,7 @@ Profile {% endblock %}
                 <p class="mb-0">Phone</p>
               </div>
               <div class="col-sm-9">
-                <p class="mb-0">+91 {{ student.mobile_number }}</p>
+                <p class="mb-0">+91 {{ user.mobile_number }}</p>
               </div>
             </div>
             <hr />
@@ -144,13 +144,13 @@ Profile {% endblock %}
               </div>
               <div class="col-sm-9">
 
-                {% if not student.linkedin_id %}
+                {% if not user.linkedin_id %}
 
                 <a href="{% url 'edit_profile' %}" class="btn btn-dark mb-0">Not Available</a>
 
                 {% else %}
 
-                <a href="{{ student.linkedin_id }}" target="_blank" class="btn btn-outline-secondary mb-0">{{ student.linkedin_id }}</a>
+                <a href="{{ user.linkedin_id }}" target="_blank" class="btn btn-outline-secondary mb-0">{{ user.linkedin_id }}</a>
 
                 {% endif %}
               </div>
@@ -162,13 +162,13 @@ Profile {% endblock %}
               </div>
               <div class="col-sm-9">
 
-                {% if not student.github_id %}
+                {% if not user.github_id %}
 
                 <a href="{% url 'edit_profile' %}" class="btn btn-dark mb-0">Not Available</a>
 
                 {% else %}
 
-                <a href="{{ student.github_id }}" target="_blank" class="btn btn-outline-dark mb-0">{{ student.github_id }}</a>
+                <a href="{{ user.github_id }}" target="_blank" class="btn btn-outline-dark mb-0">{{ user.github_id }}</a>
 
                 {% endif %}
 
@@ -182,7 +182,7 @@ Profile {% endblock %}
                 <p class="mb-0">Gender</p>
               </div>
               <div class="col-sm-9">
-                <p class="mb-0">{{ student.gender }}</p>
+                <p class="mb-0">{{ user.gender }}</p>
               </div>
             </div>
             <hr />
@@ -192,10 +192,10 @@ Profile {% endblock %}
               </div>
               <div class="col-sm-9">
 
-                {% if not student.dob %}
+                {% if not user.dob %}
                 <button class="btn btn-dark  text-white mb-0">Not Available☹️</button>
                 {% else %}
-                <p class="mb-0">{{ student.dob }}</p>
+                <p class="mb-0">{{ user.dob }}</p>
                 {% endif %}
               </div>
             </div>
