added the instructor side 100% but testing pending

--- a/templates/instructor/sheet/driver_code.html
+++ b/templates/instructor/sheet/driver_code.html
@@ -1,7 +1,7 @@
 {% extends "instructor/base.html" %}
 {% load static %}
 
-{% block problem_active %}
+{% block sheet_active %}
 active
 {% endblock %}
 
