--- a/templates/instructor/sheet/test_cases.html
+++ b/templates/instructor/sheet/test_cases.html
@@ -5,7 +5,7 @@
 Test Cases🔥
 {% endblock %}
 
-{% block problem_active %}
+{% block sheet_active %}
 active
 {% endblock %}
 
@@ -154,7 +154,7 @@ active
 
                             <td class="border-bottom-0">
                                 <div class="d-flex align-items-center gap-2">
-                                    <a href="{% url 'delete_test_case' test_case.id %}" class="btn btn-danger float-end"
+                                    <a href="{% url 'instructor_delete_test_case' test_case.id %}" class="btn btn-danger float-end"
                                         onclick="return confirm('Pakka delete krna h soch le ek baar or!!!');">Delete</a>
 
                                 </div>
