--- a/templates/instructor/sheet/edit_test_case.html
+++ b/templates/instructor/sheet/edit_test_case.html
@@ -5,7 +5,7 @@
 EDIT Test Case for {{ question.title }}
 {% endblock %}
 
-{% block problem_active %}
+{% block sheet_active %}
 active
 {% endblock %}
 
@@ -119,7 +119,7 @@ active
 
                                 <div>
                                     <div class="col-md-12">
-                                        <button type="submit" class="btn btn-success w-100 mt-3">Add Test Case</button>
+                                        <button type="submit" class="btn btn-success w-100 mt-3">Edit Test Case</button>
                                     </div>
                                 </div>
                             </div>
