--- a/templates/instructor/sheet/test_code.html
+++ b/templates/instructor/sheet/test_code.html
@@ -5,7 +5,9 @@
 Test Code | {{ question.title }}
 {% endblock %}
 
-{% block problem_active %} active {% endblock %}
+{% block sheet_active %}
+active
+{% endblock %}
 
 {% block extra_css %}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -179,15 +181,6 @@ Test Code | {{ question.title }}
 
 <div class="container-fluid">
 
-    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item pe-auto"><a href="{% url 'instructor_problems' %}">Question Set</a></li>
-            <li class="breadcrumb-item pe-auto">{{ question.title }}</li>
-
-            </li>
-            <li class="breadcrumb-item active" aria-current="page">Execute Code</li>
-        </ol>
-    </nav>
 
     <div class="card">
         <div class="card-body">
@@ -339,7 +332,7 @@ Test Code | {{ question.title }}
                             <h5 class="modal-title" id="customModalLabel">Custom Modal</h5> <button type="button"
                                 class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="modal-body"> <iframe id="customIframe" src="" width="100%" height="600px"
+                        <div class="modal-body"> <iframe id="customIframe" src="{% }" width="100%" height="600px"
                                 frameborder="0"></iframe> </div>
                         <div class="modal-footer"> <button type="button" class="btn btn-secondary"
                                 data-bs-dismiss="modal">Close</button> </div>
@@ -429,14 +422,14 @@ Test Code | {{ question.title }}
         // Driver Codes Button Click
         $("#save-draft-btn").click(function () {
             $("#customModalLabel").text("Driver Codes");
-            $("#customIframe").attr("src", "{% url 'driver_code' question.slug %}"); // Replace with the actual URL of the driver code page
+            $("#customIframe").attr("src", "{% url 'instructor_driver_code' question.slug %}"); // Replace with the actual URL of the driver code page
             $("#customModal").modal('show');
         });
 
         // Test Cases Button Click
         $("#restore-draft-btn").click(function () {
             $("#customModalLabel").text("Test Cases");
-            $("#customIframe").attr("src", "{% url 'test_cases' question.slug %}"); // Replace with the actual URL of the test case page
+            $("#customIframe").attr("src", "{% url 'instructor_test_cases' question.slug %}"); // Replace with the actual URL of the test case page
             $("#customModal").modal('show');
         });
     });
@@ -571,7 +564,7 @@ Test Code | {{ question.title }}
 
         const formData = new FormData(this);
 
-        fetch("{% url 'instructor_submit_code' question.slug %}", {
+        fetch("{% url 'administrator_submit_code' question.slug %}", {
             method: 'POST',
             body: formData,
         })
