updated streaks content on student side

--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -25,7 +25,11 @@
         [data-bs-theme="dark"] .form-control {
             color: #f0f0f0;
         }
-
+        .dropdown-item:hover i,
+        .dropdown-item:hover p {
+            color: black;
+            /* Set the text and icon color to black on hover */
+        }
         .star {
             color: red;
             display: inline;
