--- a/templates/instructor/base.html
+++ b/templates/instructor/base.html
@@ -30,7 +30,11 @@
             color: red;
             display: inline;
         }
-
+        .dropdown-item:hover i,
+        .dropdown-item:hover p {
+            color: black;
+            /* Set the text and icon color to black on hover */
+        }
         [data-bs-theme="dark"] {
             body {
                 background: linear-gradient(to bottom right, #000000, #4f4f4f);
