added instructor CRUD by adwait n shashank

--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -278,6 +278,15 @@
                                 <span class="hide-menu">Students</span>
                             </a>
                         </li>
+                        
+                        <li class="sidebar-item">
+                            <a class="sidebar-link {% block instructor_active %} {% endblock %}" href="{% url 'administrator_all_instructors' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-user-plus"></i>
+                                </span>
+                                <span class="hide-menu">Instructors</span>
+                            </a>
+                        </li>
 
                         <li class="sidebar-item">
                             <a class="sidebar-link" href="{% url 'administrator_feedbacks' %}" aria-expanded="false">
