added scenario, input n output format fields in admin, and hint unlock feature

--- a/templates/administration/sheet/add_new_question.html
+++ b/templates/administration/sheet/add_new_question.html
@@ -73,6 +73,23 @@ active
                                     placeholder="Description here..." required></textarea>
                             </div>
 
+                            <div class="mb-3">
+                                <label for="job_title" class="form-label">Input Format
+                                    <div class="star">*</div>
+                                </label>
+                                <textarea class="form-control" id="input_format" name="input_format" rows="5"
+                                    placeholder="Input format here..." required></textarea>
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="job_title" class="form-label">Output Format
+                                    <div class="star">*</div>
+                                </label>
+                                <textarea class="form-control" id="output_format" name="output_format" rows="5"
+                                    placeholder="Output format here..." required></textarea>
+                            </div>
+
+
 
                             <div class="mb-3">
                                 <label for="job_title" class="form-label">Constraints
