--- a/templates/administration/practice/edit_question.html
+++ b/templates/administration/practice/edit_question.html
@@ -15,8 +15,7 @@ active
 
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item pe-auto"><a href="{% url 'administrator_problems' %}">Question Set</a></li>
-            <li class="breadcrumb-item pe-auto">{{ question.title }}</li>
+            <li class="breadcrumb-item pe-auto cursor-pointer"  onclick="history.back()">{{ question.title }}</li>
 
             </li>
             <li class="breadcrumb-item active" aria-current="page">Edit Question</li>
